--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-matplotlib==3.7.1
-numpy==1.23.5
-pandas==1.5.3
-scipy==1.11.3
-seaborn==0.12.2
+hydra-core==1.3.2
+lightgbm==3.3.5
+matplotlib==3.6.0
+numpy==1.24.4
+omegaconf==2.2.3
+optuna==3.5.0
+pandas==1.5.0
 scikit-learn==1.2.2
-statsmodels==0.14.0
-tqdm==4.66.1
+tqdm==4.65.2
+wandb==0.16.1
+xgboost==1.7.6
