--- a/configs/architecture/xgb_architecture.yaml
+++ b/configs/architecture/xgb_architecture.yaml
@@ -2,3 +2,6 @@ _target_: src.architectures.xgb_architecture.XGBArchitecture
 run_name: ${run_name}
 model_save_path: ${model_save_path}
 result_summary_path: ${result_summary_path}
+
+wandb_project: ${oc.env:WANDB_PROJECT}
+wandb_entity: ${oc.env:WANDB_ENTITY}
