--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ numpy==1.24.4
 omegaconf==2.2.3
 optuna==3.5.0
 pandas==1.5.0
+python-dotenv==1.0.1
 scikit-learn==1.2.2
 tqdm==4.65.2
 wandb==0.16.1
